--- a/outlier_detection.ipynb
+++ b/outlier_detection.ipynb
@@ -10,47 +10,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed 5 rows with unusual patterns\n",
-      "           Date   Close     Volume    Open    High     Low Ticker  is_outlier  \\\n",
-      "0    2020-11-02  133.50   87063369  131.33  135.66  130.77   TSLA       False   \n",
-      "1    2020-11-03  141.30  103055170  136.58  142.59  135.56   TSLA       False   \n",
-      "2    2020-11-04  140.33   96429190  143.54  145.13  139.03   TSLA       False   \n",
-      "3    2020-11-05  146.03   85243569  142.77  146.67  141.33   TSLA       False   \n",
-      "4    2020-11-06  143.32   65118037  145.37  145.52  141.43   TSLA       False   \n",
-      "...         ...     ...        ...     ...     ...     ...    ...         ...   \n",
-      "1245 2025-10-24  433.72   94727770  446.83  451.68  430.17   TSLA        True   \n",
-      "1246 2025-10-27  452.42  105867500  439.98  460.16  438.69   TSLA        True   \n",
-      "1247 2025-10-28  460.55   80185670  454.78  467.00  451.60   TSLA        True   \n",
-      "1248 2025-10-29  461.51   67983540  462.50  465.70  452.65   TSLA        True   \n",
-      "1249 2025-10-30  440.10   72447940  451.05  455.06  439.61   TSLA        True   \n",
+      "           Date   Close     Volume    Open    High     Low Ticker    return  \\\n",
+      "0    2020-11-02  133.50   87063369  131.33  135.66  130.77   TSLA  0.000000   \n",
+      "1    2020-11-03  141.30  103055170  136.58  142.59  135.56   TSLA  0.056784   \n",
+      "2    2020-11-04  140.33   96429190  143.54  145.13  139.03   TSLA -0.006888   \n",
+      "3    2020-11-05  146.03   85243569  142.77  146.67  141.33   TSLA  0.039815   \n",
+      "4    2020-11-06  143.32   65118037  145.37  145.52  141.43   TSLA -0.018732   \n",
+      "...         ...     ...        ...     ...     ...     ...    ...       ...   \n",
+      "1249 2025-10-24  433.72   94727770  446.83  451.68  430.17   TSLA -0.034579   \n",
+      "1250 2025-10-27  452.42  105867500  439.98  460.16  438.69   TSLA  0.042212   \n",
+      "1251 2025-10-28  460.55   80185670  454.78  467.00  451.60   TSLA  0.017810   \n",
+      "1252 2025-10-29  461.51   67983540  462.50  465.70  452.65   TSLA  0.002082   \n",
+      "1253 2025-10-30  440.10   72447940  451.05  455.06  439.61   TSLA -0.047502   \n",
       "\n",
-      "          outlier_location  \n",
-      "0                           \n",
-      "1                           \n",
-      "2                           \n",
-      "3                           \n",
-      "4                           \n",
-      "...                    ...  \n",
-      "1245  Open;High;Low;Close;  \n",
-      "1246  Open;High;Low;Close;  \n",
-      "1247  Open;High;Low;Close;  \n",
-      "1248  Open;High;Low;Close;  \n",
-      "1249  Open;High;Low;Close;  \n",
+      "      hl_range  is_outlier          outlier_desc  \n",
+      "0          inf       False                        \n",
+      "1     0.052659       False                        \n",
+      "2     0.043171       False                        \n",
+      "3     0.038053       False                        \n",
+      "4     0.028008       False                        \n",
+      "...        ...         ...                   ...  \n",
+      "1249  0.047909        True  Open;High;Low;Close;  \n",
+      "1250  0.049502        True  Open;High;Low;Close;  \n",
+      "1251  0.034039        True  Open;High;Low;Close;  \n",
+      "1252  0.028336        True  Open;High;Low;Close;  \n",
+      "1253  0.033477        True  Open;High;Low;Close;  \n",
       "\n",
-      "[1250 rows x 9 columns]\n",
-      "           Date   Close    Volume    Open    High     Low Ticker  is_outlier  \\\n",
-      "379  2022-05-05  291.09  92519199  313.07  315.20  285.90   TSLA       False   \n",
-      "381  2022-05-09  262.37  90810219  278.82  281.88  260.38   TSLA       False   \n",
-      "1055 2025-01-15  428.22  81375460  409.90  429.80  405.66   TSLA       False   \n",
-      "1240 2025-10-10  400.49         0  436.54  443.13  411.45   TSLA       False   \n",
-      "1241 2025-10-13  435.90  79552790  423.53  436.89  419.70   TSLA        True   \n",
+      "[1254 rows x 11 columns]\n",
+      "           Date   Close  Volume    Open    High     Low Ticker    return  \\\n",
+      "1240 2025-10-10  400.49       0  436.54  443.13  411.45   TSLA -0.083898   \n",
       "\n",
-      "     outlier_location  \n",
-      "379                    \n",
-      "381                    \n",
-      "1055                   \n",
-      "1240                   \n",
-      "1241           Close;  \n"
+      "      hl_range  is_outlier        outlier_desc  \n",
+      "1240  0.072737        True  inconsistent_data;  \n"
      ]
     }
    ],
