--- a/outlier_detection.ipynb
+++ b/outlier_detection.ipynb
@@ -7,46 +7,32 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Date   Close     Volume    Open    High     Low Ticker    return  \\\n",
-      "0    2020-11-02  133.50   87063369  131.33  135.66  130.77   TSLA  0.000000   \n",
-      "1    2020-11-03  141.30  103055170  136.58  142.59  135.56   TSLA  0.056784   \n",
-      "2    2020-11-04  140.33   96429190  143.54  145.13  139.03   TSLA -0.006888   \n",
-      "3    2020-11-05  146.03   85243569  142.77  146.67  141.33   TSLA  0.039815   \n",
-      "4    2020-11-06  143.32   65118037  145.37  145.52  141.43   TSLA -0.018732   \n",
-      "...         ...     ...        ...     ...     ...     ...    ...       ...   \n",
-      "1249 2025-10-24  433.72   94727770  446.83  451.68  430.17   TSLA -0.034579   \n",
-      "1250 2025-10-27  452.42  105867500  439.98  460.16  438.69   TSLA  0.042212   \n",
-      "1251 2025-10-28  460.55   80185670  454.78  467.00  451.60   TSLA  0.017810   \n",
-      "1252 2025-10-29  461.51   67983540  462.50  465.70  452.65   TSLA  0.002082   \n",
-      "1253 2025-10-30  440.10   72447940  451.05  455.06  439.61   TSLA -0.047502   \n",
-      "\n",
-      "      hl_range  is_outlier          outlier_desc  \n",
-      "0          inf       False                        \n",
-      "1     0.052659       False                        \n",
-      "2     0.043171       False                        \n",
-      "3     0.038053       False                        \n",
-      "4     0.028008       False                        \n",
-      "...        ...         ...                   ...  \n",
-      "1249  0.047909        True  Open;High;Low;Close;  \n",
-      "1250  0.049502        True  Open;High;Low;Close;  \n",
-      "1251  0.034039        True  Open;High;Low;Close;  \n",
-      "1252  0.028336        True  Open;High;Low;Close;  \n",
-      "1253  0.033477        True  Open;High;Low;Close;  \n",
-      "\n",
-      "[1254 rows x 11 columns]\n",
-      "           Date   Close  Volume    Open    High     Low Ticker    return  \\\n",
-      "1240 2025-10-10  400.49       0  436.54  443.13  411.45   TSLA -0.083898   \n",
-      "\n",
-      "      hl_range  is_outlier        outlier_desc  \n",
-      "1240  0.072737        True  inconsistent_data;  \n"
+     "ename": "KeyError",
+     "evalue": "'outlier_desc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/project/school/concordia/COMP-333/.venv/lib/python3.13/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'outlier_desc'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m tsla_stock = StockDataStore(\u001b[33m\"\u001b[39m\u001b[33mTSLA\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Load a CSV file and do all the pre-processing\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[43mtsla_stock\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_from_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mTSLA_5Y.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Cleaned up DataFrame with flagged/removed outliers, null data handling, etc.\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(tsla_stock.data)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/project/school/concordia/COMP-333/P1_40314968_CoulombeMorency_Julien/stock_data.py:38\u001b[39m, in \u001b[36mStockDataStore.load_from_csv\u001b[39m\u001b[34m(self, file_path)\u001b[39m\n\u001b[32m     35\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m\"\u001b[39m\u001b[33mOpen\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mHigh\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mLow\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mClose\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m     36\u001b[39m     \u001b[38;5;28mself\u001b[39m._convert_currency_to_float(col)\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_preprocess_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     40\u001b[39m \u001b[38;5;28mself\u001b[39m._store = \u001b[38;5;28mself\u001b[39m._raw.copy()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/project/school/concordia/COMP-333/P1_40314968_CoulombeMorency_Julien/stock_data.py:44\u001b[39m, in \u001b[36mStockDataStore._preprocess_data\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     42\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_preprocess_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     43\u001b[39m     \u001b[38;5;28mself\u001b[39m._add_simple_features()\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_detect_and_handle_outliers\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/project/school/concordia/COMP-333/P1_40314968_CoulombeMorency_Julien/stock_data.py:67\u001b[39m, in \u001b[36mStockDataStore._detect_and_handle_outliers\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     64\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mDataframe is empty. Load data first.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     66\u001b[39m \u001b[38;5;28mself\u001b[39m._raw[\u001b[33m\"\u001b[39m\u001b[33mis_outlier\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m67\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_raw\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43moutlier_desc\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m.astype(\u001b[38;5;28mstr\u001b[39m)\n\u001b[32m     69\u001b[39m \u001b[38;5;66;03m# 1) Make sure data is consistent: Open|High|Close|Low -> Making sure no impossible values exist\u001b[39;00m\n\u001b[32m     70\u001b[39m \u001b[38;5;28mself\u001b[39m._detect_inconsistencies()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/project/school/concordia/COMP-333/.venv/lib/python3.13/site-packages/pandas/core/frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/project/school/concordia/COMP-333/.venv/lib/python3.13/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'outlier_desc'"
      ]
     }
    ],
    "source": [
-    "from stock_data import StockDataStore\n",
+    "from stock_data import StockDataStore, DailyIndicatorStore\n",
     "\n",
     "tsla_stock = StockDataStore(\"TSLA\")\n",
     "\n",
@@ -54,14 +40,72 @@
     "tsla_stock.load_from_csv(\"TSLA_5Y.csv\")\n",
     "\n",
     "# Cleaned up DataFrame with flagged/removed outliers, null data handling, etc.\n",
-    "print(tsla_stock.data)\n",
-    "print(tsla_stock.outliers)"
+    "print(tsla_stock.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c6309347-0459-4d50-84e1-fa891de7b16b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     calculation_date ticker      sma_20      sma_50     rsi_14       macd  \\\n",
+      "0          2020-11-02   TSLA  133.500000  133.500000   0.000000   0.000000   \n",
+      "1          2020-11-03   TSLA  137.400000  137.400000   0.000000   0.622222   \n",
+      "2          2020-11-04   TSLA  138.376667  138.376667  88.189250   1.025248   \n",
+      "3          2020-11-05   TSLA  140.290000  140.290000  93.241039   1.784027   \n",
+      "4          2020-11-06   TSLA  140.896000  140.896000  76.489691   2.141998   \n",
+      "...               ...    ...         ...         ...        ...        ...   \n",
+      "1249       2025-10-24   TSLA  439.712000  396.440000  52.967774  10.791035   \n",
+      "1250       2025-10-27   TSLA  440.313000  398.776800  59.326749  11.109596   \n",
+      "1251       2025-10-28   TSLA  441.180000  401.376600  61.748208  11.881122   \n",
+      "1252       2025-10-29   TSLA  442.019500  403.903600  62.035623  12.426778   \n",
+      "1253       2025-10-30   TSLA  441.051500  406.119400  52.551943  11.004750   \n",
+      "\n",
+      "      bollinger_upper  bollinger_lower  volatility_20d  rsi_14_norm  \\\n",
+      "0          133.500000       133.500000        0.000000     0.000000   \n",
+      "1          145.200000       129.600000        0.450708     0.000000   \n",
+      "2          145.318642       131.434691        0.452911     0.881893   \n",
+      "3          149.238374       131.341626        0.423370     0.932410   \n",
+      "4          149.258685       132.533315        0.460110     0.764897   \n",
+      "...               ...              ...             ...          ...   \n",
+      "1249       455.462401       423.961599        0.511620     0.529678   \n",
+      "1250       457.011333       423.614667        0.514069     0.593267   \n",
+      "1251       460.049454       422.310546        0.515823     0.617482   \n",
+      "1252       462.837586       421.201414        0.515930     0.620356   \n",
+      "1253       460.275113       421.827887        0.537945     0.525519   \n",
+      "\n",
+      "      sma_20_ratio  sma_50_ratio  macd_pct    bb_pos  volatility_20d_z  \n",
+      "0         0.000000      0.000000  0.000000       NaN         -3.251769  \n",
+      "1         0.028384      0.028384  0.004404  0.500000         -0.660703  \n",
+      "2         0.014116      0.014116  0.007306  0.281380         -0.648035  \n",
+      "3         0.040915      0.040915  0.012217  0.641457         -0.817864  \n",
+      "4         0.017204      0.017204  0.014946  0.289859         -0.606650  \n",
+      "...            ...           ...       ...       ...               ...  \n",
+      "1249     -0.013627      0.094037  0.024880 -0.380435         -0.310525  \n",
+      "1250      0.027496      0.134519  0.024556  0.725042         -0.296442  \n",
+      "1251      0.043905      0.147426  0.025798  1.026527         -0.286363  \n",
+      "1252      0.044094      0.142624  0.026926  0.936229         -0.285744  \n",
+      "1253     -0.002157      0.083671  0.025005 -0.049496         -0.159187  \n",
+      "\n",
+      "[1254 rows x 15 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "indicators = DailyIndicatorStore(tsla_stock)\n",
+    "\n",
+    "print(indicators.data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6309347-0459-4d50-84e1-fa891de7b16b",
+   "id": "1574a7e6-34e9-4e4e-b3d4-34066bdadce9",
    "metadata": {},
    "outputs": [],
    "source": []
