--- a/outlier_detection.ipynb
+++ b/outlier_detection.ipynb
@@ -10,39 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Date   Close     Volume    Open    High     Low Ticker    return  \\\n",
-      "0    2020-11-02  133.50   87063369  131.33  135.66  130.77   TSLA  0.000000   \n",
-      "1    2020-11-03  141.30  103055170  136.58  142.59  135.56   TSLA  0.056784   \n",
-      "2    2020-11-04  140.33   96429190  143.54  145.13  139.03   TSLA -0.006888   \n",
-      "3    2020-11-05  146.03   85243569  142.77  146.67  141.33   TSLA  0.039815   \n",
-      "4    2020-11-06  143.32   65118037  145.37  145.52  141.43   TSLA -0.018732   \n",
-      "...         ...     ...        ...     ...     ...     ...    ...       ...   \n",
-      "1249 2025-10-24  433.72   94727770  446.83  451.68  430.17   TSLA -0.034579   \n",
-      "1250 2025-10-27  452.42  105867500  439.98  460.16  438.69   TSLA  0.042212   \n",
-      "1251 2025-10-28  460.55   80185670  454.78  467.00  451.60   TSLA  0.017810   \n",
-      "1252 2025-10-29  461.51   67983540  462.50  465.70  452.65   TSLA  0.002082   \n",
-      "1253 2025-10-30  440.10   72447940  451.05  455.06  439.61   TSLA -0.047502   \n",
+      "           Date   Close  Volume    Open    High     Low Ticker    return  \\\n",
+      "1240 2025-10-10  400.49       0  436.54  443.13  411.45   TSLA -0.083898   \n",
       "\n",
-      "      hl_range  is_outlier          outlier_desc  \n",
-      "0     0.000000       False                        \n",
-      "1     0.052659       False                        \n",
-      "2     0.043171       False                        \n",
-      "3     0.038053       False                        \n",
-      "4     0.028008       False                        \n",
-      "...        ...         ...                   ...  \n",
-      "1249  0.047909        True  Open;High;Low;Close;  \n",
-      "1250  0.049502        True  Open;High;Low;Close;  \n",
-      "1251  0.034039        True  Open;High;Low;Close;  \n",
-      "1252  0.028336        True  Open;High;Low;Close;  \n",
-      "1253  0.033477        True  Open;High;Low;Close;  \n",
-      "\n",
-      "[1254 rows x 11 columns]\n"
+      "      hl_range  is_outlier        outlier_desc  \n",
+      "1240  0.072737        True  inconsistent_data;  \n"
      ]
     }
    ],
    "source": [
     "from stock_data import StockDataStore, DailyIndicatorStore\n",
-    "from sentiment_data import SentimentDataStore\n",
+    "from sentiment_data import SentimentDataStore, SentimentAggregateDataStore\n",
     "\n",
     "tsla_stock = StockDataStore(\"TSLA\")\n",
     "\n",
@@ -50,12 +28,12 @@
     "tsla_stock.load_from_csv(\"TSLA_5Y.csv\")\n",
     "\n",
     "# Cleaned up DataFrame with flagged/removed outliers, null data handling, etc.\n",
-    "print(tsla_stock.data)"
+    "print(tsla_stock.outliers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c6309347-0459-4d50-84e1-fa891de7b16b",
    "metadata": {},
    "outputs": [
@@ -63,31 +41,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     calculation_date ticker  rsi_14_norm  sma_20_ratio  sma_50_ratio  \\\n",
-      "0          2020-11-02   TSLA     0.000000      0.000000      0.000000   \n",
-      "1          2020-11-03   TSLA     0.000000      0.028384      0.028384   \n",
-      "2          2020-11-04   TSLA     0.881893      0.014116      0.014116   \n",
-      "3          2020-11-05   TSLA     0.932410      0.040915      0.040915   \n",
-      "4          2020-11-06   TSLA     0.764897      0.017204      0.017204   \n",
-      "...               ...    ...          ...           ...           ...   \n",
-      "1249       2025-10-24   TSLA     0.529678     -0.013627      0.094037   \n",
-      "1250       2025-10-27   TSLA     0.593267      0.027496      0.134519   \n",
-      "1251       2025-10-28   TSLA     0.617482      0.043905      0.147426   \n",
-      "1252       2025-10-29   TSLA     0.620356      0.044094      0.142624   \n",
-      "1253       2025-10-30   TSLA     0.525519     -0.002157      0.083671   \n",
+      "     calculation_date ticker      sma_20      sma_50     sma_200     rsi_14  \\\n",
+      "0          2020-11-02   TSLA  133.500000  133.500000  133.500000   0.000000   \n",
+      "1          2020-11-03   TSLA  137.400000  137.400000  137.400000   0.000000   \n",
+      "2          2020-11-04   TSLA  138.376667  138.376667  138.376667  88.189250   \n",
+      "3          2020-11-05   TSLA  140.290000  140.290000  140.290000  93.241039   \n",
+      "4          2020-11-06   TSLA  140.896000  140.896000  140.896000  76.489691   \n",
+      "...               ...    ...         ...         ...         ...        ...   \n",
+      "1249       2025-10-24   TSLA  439.712000  396.440000  335.687850  52.967774   \n",
+      "1250       2025-10-27   TSLA  440.313000  398.776800  335.978150  59.326749   \n",
+      "1251       2025-10-28   TSLA  441.180000  401.376600  336.306200  61.748208   \n",
+      "1252       2025-10-29   TSLA  442.019500  403.903600  336.640050  62.035623   \n",
+      "1253       2025-10-30   TSLA  441.051500  406.119400  336.824000  52.551943   \n",
       "\n",
-      "      golden_cross  death_cross  macd_pct    bb_pos  volatility_20d_z  \n",
-      "0            False        False  0.000000       NaN         -3.251769  \n",
-      "1            False        False  0.004404  0.500000         -0.660703  \n",
-      "2            False        False  0.007306  0.281380         -0.648035  \n",
-      "3            False        False  0.012217  0.641457         -0.817864  \n",
-      "4            False        False  0.014946  0.289859         -0.606650  \n",
-      "...            ...          ...       ...       ...               ...  \n",
-      "1249         False        False  0.024880 -0.380435         -0.310525  \n",
-      "1250         False        False  0.024556  0.725042         -0.296442  \n",
-      "1251         False        False  0.025798  1.026527         -0.286363  \n",
-      "1252         False        False  0.026926  0.936229         -0.285744  \n",
-      "1253         False        False  0.025005 -0.049496         -0.159187  \n",
+      "           macd  bollinger_upper  bollinger_lower  volatility_20d  \n",
+      "0      0.000000       133.500000       133.500000        0.000000  \n",
+      "1      0.622222       145.200000       129.600000        0.450708  \n",
+      "2      1.025248       145.318642       131.434691        0.452911  \n",
+      "3      1.784027       149.238374       131.341626        0.423370  \n",
+      "4      2.141998       149.258685       132.533315        0.460110  \n",
+      "...         ...              ...              ...             ...  \n",
+      "1249  10.791035       455.462401       423.961599        0.511620  \n",
+      "1250  11.109596       457.011333       423.614667        0.514069  \n",
+      "1251  11.881122       460.049454       422.310546        0.515823  \n",
+      "1252  12.426778       462.837586       421.201414        0.515930  \n",
+      "1253  11.004750       460.275113       421.827887        0.537945  \n",
       "\n",
       "[1254 rows x 10 columns]\n"
      ]
@@ -96,7 +74,7 @@
    "source": [
     "indicators = DailyIndicatorStore(tsla_stock)\n",
     "\n",
-    "print(indicators.normalized)"
+    "print(indicators.raw)"
    ]
   },
   {
@@ -109,46 +87,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                        ID        Date Ticker              Username  \\\n",
-      "0      1220391178006409222  2020-01-23   TSLA             TESLARATI   \n",
-      "1      1222633963446992897  2020-01-29   TSLA                    JC   \n",
-      "2      1222634093868961800  2020-01-29   TSLA                    TC   \n",
-      "3      1222658442638307328  2020-01-29   TSLA                   CNN   \n",
-      "4      1222636749429661699  2020-01-29   TSLA        Pierre Ferragu   \n",
-      "...                    ...         ...    ...                   ...   \n",
-      "11291  1874139743719743697  2024-12-31   TSLA         Markets Today   \n",
-      "11292  1874153904889536554  2024-12-31   TSLA          David Moadel   \n",
-      "11293  1874154136528445879  2024-12-31   TSLA          David Moadel   \n",
-      "11294  1873920510142406854  2024-12-31   TSLA          David Moadel   \n",
-      "11295  1874218446432723375  2024-12-31   TSLA  BullishBanterSociety   \n",
+      "               avg_sentiment              volume               variance  \\\n",
+      "Platform                News Social Media   News Social Media      News   \n",
+      "aggregate_date                                                            \n",
+      "2020-01-23          0.340000          NaN    1.0          NaN  0.000000   \n",
+      "2020-01-29          0.358700          NaN    6.0          NaN  0.284231   \n",
+      "2020-01-30          0.311400          NaN    2.0          NaN  0.113704   \n",
+      "2020-01-31          0.079300          NaN    1.0          NaN  0.000000   \n",
+      "2020-02-03         -0.987700          NaN    1.0          NaN  0.000000   \n",
+      "...                      ...          ...    ...          ...       ...   \n",
+      "2024-12-27          0.602700       0.7184    2.0          1.0  0.026341   \n",
+      "2024-12-28          0.188120      -0.6820    5.0          1.0  0.025593   \n",
+      "2024-12-29          0.617850          NaN    4.0          NaN  0.008852   \n",
+      "2024-12-30          0.040743          NaN    7.0          NaN  0.175953   \n",
+      "2024-12-31          0.372956          NaN    9.0          NaN  0.104848   \n",
       "\n",
-      "                                                    Text  Retweets  Likes  \\\n",
-      "0      Tesla stock holds gains despite 'Sell' and dow...        18    227   \n",
-      "1      Tesla's 2019Q4 free cashflow ($1B) exceeded Wa...        32    231   \n",
-      "2      Versus same quarter a year ago, this amazing h...        69    450   \n",
-      "3      Tesla posted its first annual profit, easily t...        35    151   \n",
-      "4      $TSLA - $1bn FCF and flat sequential gross mar...        31    311   \n",
-      "...                                                  ...       ...    ...   \n",
-      "11291  Most Actives #stocks by intraday trade volume ...         1      0   \n",
-      "11292  Nvidia is 'printing money,' yet even more grow...         0      1   \n",
-      "11293  Google stock is enjoying a December resurgence...         0      0   \n",
-      "11294  #Options For January https://t.co/NGSbCiWAg4 $...         0      1   \n",
-      "11295  🚨 MOST ACTIVE #STOCKS TODAY  1. $FFIE 157.12M ...         0      3   \n",
+      "                            extreme_sentiment_flag               \n",
+      "Platform       Social Media                   News Social Media  \n",
+      "aggregate_date                                                   \n",
+      "2020-01-23              NaN                  False          NaN  \n",
+      "2020-01-29              NaN                  False          NaN  \n",
+      "2020-01-30              NaN                  False          NaN  \n",
+      "2020-01-31              NaN                  False          NaN  \n",
+      "2020-02-03              NaN                   True          NaN  \n",
+      "...                     ...                    ...          ...  \n",
+      "2024-12-27              0.0                  False        False  \n",
+      "2024-12-28              0.0                  False        False  \n",
+      "2024-12-29              NaN                  False          NaN  \n",
+      "2024-12-30              NaN                  False          NaN  \n",
+      "2024-12-31              NaN                  False          NaN  \n",
       "\n",
-      "       Sentiment_Score  \n",
-      "0               0.3400  \n",
-      "1               0.7650  \n",
-      "2               0.8591  \n",
-      "3               0.6486  \n",
-      "4              -0.4767  \n",
-      "...                ...  \n",
-      "11291           0.3384  \n",
-      "11292          -0.0478  \n",
-      "11293           0.5267  \n",
-      "11294           0.0000  \n",
-      "11295           0.6661  \n",
-      "\n",
-      "[11296 rows x 8 columns]\n"
+      "[473 rows x 8 columns]\n"
      ]
     }
    ],
@@ -157,7 +126,8 @@
     "\n",
     "sentiment_store.load_tweets()\n",
     "\n",
-    "print(sentiment_store.data)\n"
+    "daily_sentiment_store = SentimentAggregateDataStore(sentiment_store)\n",
+    "print(daily_sentiment_store.data)\n"
    ]
   },
   {
